Improve orbit controls placements, fix z-index with customize-view

--- a/src/styles/production/ui/orbit-viewer/_customize-view.scss
+++ b/src/styles/production/ui/orbit-viewer/_customize-view.scss
@@ -135,7 +135,7 @@
 
 .active.customize-view {
 
-	@extend .to-front;
+	// @extend .to-front;
 
 	.customize-view-icon {
 		background-color: var(--blue-0);
